--- a/main.html
+++ b/main.html
@@ -1,16 +1,109 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Cards Gallery</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    .card img {
+      cursor: pointer;
+    }
+  </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <div class="container py-5">
+    <h2 class="text-center mb-4">Cards Gallery</h2>
+    <div class="row g-4">
+      <!-- Repeatable Card Component -->
+      <!-- Card 1 -->
+      <div class="col-md-4">
+        <div class="card border-0 shadow rounded">
+          <img src="Image1.jpg" class="card-img-top rounded" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image1.jpg" alt="Image1">
+          <div class="card-body text-center">
+            <h6>Card Title 1</h6>
+            <p>Some details about this card image.</p>
+          </div>
+        </div>
+      </div>
+      <!-- Card 2 -->
+      <div class="col-md-4">
+        <div class="card border-0 shadow rounded">
+          <img src="Image2.jpg" class="card-img-top rounded" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image2.jpg" alt="Image2">
+          <div class="card-body text-center">
+            <h6>Card Title 2</h6>
+            <p>Some details about this card image.</p>
+          </div>
+        </div>
+      </div>
+      <!-- Card 3 -->
+      <div class="col-md-4">
+        <div class="card border-0 shadow rounded">
+          <img src="Image3.jpg" class="card-img-top rounded" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image3.jpg" alt="Image3">
+          <div class="card-body text-center">
+            <h6>Card Title 3</h6>
+            <p>Some details about this card image.</p>
+          </div>
+        </div>
+      </div>
+      <!-- Card 4 -->
+      <div class="col-md-4">
+        <div class="card border-0 shadow rounded">
+          <img src="Image4.jpg" class="card-img-top rounded" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image4.jpg" alt="Image4">
+          <div class="card-body text-center">
+            <h6>Card Title 4</h6>
+            <p>Some details about this card image.</p>
+          </div>
+        </div>
+      </div>
+      <!-- Card 5 -->
+      <div class="col-md-4">
+        <div class="card border-0 shadow rounded">
+          <img src="Image5.jpg" class="card-img-top rounded" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image5.jpg" alt="Image5">
+          <div class="card-body text-center">
+            <h6>Card Title 5</h6>
+            <p>Some details about this card image.</p>
+          </div>
+        </div>
+      </div>
+      <!-- Card 6 -->
+      <div class="col-md-4">
+        <div class="card border-0 shadow rounded">
+          <img src="Image6.jpg" class="card-img-top rounded" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image6.jpg" alt="Image6">
+          <div class="card-body text-center">
+            <h6>Card Title 6</h6>
+            <p>Some details about this card image.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Lightbox Modal -->
+  <div class="modal fade" id="lightboxModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+      <div class="modal-content bg-transparent border-0">
+        <div class="modal-body p-0">
+          <img src="" class="w-100 rounded" id="lightboxImage" alt="Lightbox view">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Bootstrap JS & Dependencies -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    // Lightbox Image Update
+    const lightboxModal = document.getElementById('lightboxModal');
+    const lightboxImage = document.getElementById('lightboxImage');
+    lightboxModal.addEventListener('show.bs.modal', function (event) {
+      const triggerImg = event.relatedTarget;
+      const imgSrc = triggerImg.getAttribute('data-bs-img');
+      lightboxImage.src = imgSrc;
+    });
+  </script>
 
 </body>
-
 </html>
