--- a/main.html
+++ b/main.html
@@ -17,11 +17,10 @@
   <div class="container py-5">
     <h2 class="text-center mb-4">Cards Gallery</h2>
     <div class="row g-4">
-      <!-- Repeatable Card Component -->
       <!-- Card 1 -->
       <div class="col-md-4">
         <div class="card border-0 shadow rounded">
-          <img src="Image1.jpg" class="card-img-top rounded" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image1.jpg" alt="Image1">
+          <img src="Image1.jpg" class="card-img-top rounded gallery-img lightbox" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image1.jpg" alt="Image1">
           <div class="card-body text-center">
             <h6>Card Title 1</h6>
             <p>Some details about this card image.</p>
@@ -31,7 +30,7 @@
       <!-- Card 2 -->
       <div class="col-md-4">
         <div class="card border-0 shadow rounded">
-          <img src="Image2.jpg" class="card-img-top rounded" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image2.jpg" alt="Image2">
+          <img src="Image2.jpg" class="card-img-top rounded gallery-img lightbox" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image2.jpg" alt="Image2">
           <div class="card-body text-center">
             <h6>Card Title 2</h6>
             <p>Some details about this card image.</p>
@@ -41,7 +40,7 @@
       <!-- Card 3 -->
       <div class="col-md-4">
         <div class="card border-0 shadow rounded">
-          <img src="Image3.jpg" class="card-img-top rounded" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image3.jpg" alt="Image3">
+          <img src="Image3.jpg" class="card-img-top rounded gallery-img lightbox" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image3.jpg" alt="Image3">
           <div class="card-body text-center">
             <h6>Card Title 3</h6>
             <p>Some details about this card image.</p>
@@ -51,7 +50,7 @@
       <!-- Card 4 -->
       <div class="col-md-4">
         <div class="card border-0 shadow rounded">
-          <img src="Image4.jpg" class="card-img-top rounded" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image4.jpg" alt="Image4">
+          <img src="Image4.jpg" class="card-img-top rounded gallery-img lightbox" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image4.jpg" alt="Image4">
           <div class="card-body text-center">
             <h6>Card Title 4</h6>
             <p>Some details about this card image.</p>
@@ -61,7 +60,7 @@
       <!-- Card 5 -->
       <div class="col-md-4">
         <div class="card border-0 shadow rounded">
-          <img src="Image5.jpg" class="card-img-top rounded" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image5.jpg" alt="Image5">
+          <img src="Image5.jpg" class="card-img-top rounded gallery-img lightbox" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image5.jpg" alt="Image5">
           <div class="card-body text-center">
             <h6>Card Title 5</h6>
             <p>Some details about this card image.</p>
@@ -71,7 +70,7 @@
       <!-- Card 6 -->
       <div class="col-md-4">
         <div class="card border-0 shadow rounded">
-          <img src="Image6.jpg" class="card-img-top rounded" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image6.jpg" alt="Image6">
+          <img src="Image6.jpg" class="card-img-top rounded gallery-img lightbox" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image6.jpg" alt="Image6">
           <div class="card-body text-center">
             <h6>Card Title 6</h6>
             <p>Some details about this card image.</p>
@@ -95,7 +94,7 @@
   <!-- Bootstrap JS & Dependencies -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    // Lightbox Image Update
+    // Lightbox logic
     const lightboxModal = document.getElementById('lightboxModal');
     const lightboxImage = document.getElementById('lightboxImage');
     lightboxModal.addEventListener('show.bs.modal', function (event) {
