--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
       <!-- Card 1 -->
       <div class="col-md-4">
         <div class="card border-0 shadow rounded">
-          <img src="Image1.jpg" class="card-img-top rounded gallery-img lightbox" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image1.jpg" alt="Image1">
+          <img src="Image1.jpg" class="card-img-top rounded gallery-img lightbox" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image1.jpg" data-testid="gallery-img" alt="Image1">
           <div class="card-body text-center">
             <h6>Card Title 1</h6>
             <p>Some details about this card image.</p>
@@ -30,7 +30,7 @@
       <!-- Card 2 -->
       <div class="col-md-4">
         <div class="card border-0 shadow rounded">
-          <img src="Image2.jpg" class="card-img-top rounded gallery-img lightbox" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image2.jpg" alt="Image2">
+          <img src="Image2.jpg" class="card-img-top rounded gallery-img lightbox" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image2.jpg" data-testid="gallery-img" alt="Image2">
           <div class="card-body text-center">
             <h6>Card Title 2</h6>
             <p>Some details about this card image.</p>
@@ -40,7 +40,7 @@
       <!-- Card 3 -->
       <div class="col-md-4">
         <div class="card border-0 shadow rounded">
-          <img src="Image3.jpg" class="card-img-top rounded gallery-img lightbox" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image3.jpg" alt="Image3">
+          <img src="Image3.jpg" class="card-img-top rounded gallery-img lightbox" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image3.jpg" data-testid="gallery-img" alt="Image3">
           <div class="card-body text-center">
             <h6>Card Title 3</h6>
             <p>Some details about this card image.</p>
@@ -50,7 +50,7 @@
       <!-- Card 4 -->
       <div class="col-md-4">
         <div class="card border-0 shadow rounded">
-          <img src="Image4.jpg" class="card-img-top rounded gallery-img lightbox" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image4.jpg" alt="Image4">
+          <img src="Image4.jpg" class="card-img-top rounded gallery-img lightbox" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image4.jpg" data-testid="gallery-img" alt="Image4">
           <div class="card-body text-center">
             <h6>Card Title 4</h6>
             <p>Some details about this card image.</p>
@@ -60,7 +60,7 @@
       <!-- Card 5 -->
       <div class="col-md-4">
         <div class="card border-0 shadow rounded">
-          <img src="Image5.jpg" class="card-img-top rounded gallery-img lightbox" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image5.jpg" alt="Image5">
+          <img src="Image5.jpg" class="card-img-top rounded gallery-img lightbox" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image5.jpg" data-testid="gallery-img" alt="Image5">
           <div class="card-body text-center">
             <h6>Card Title 5</h6>
             <p>Some details about this card image.</p>
@@ -70,7 +70,7 @@
       <!-- Card 6 -->
       <div class="col-md-4">
         <div class="card border-0 shadow rounded">
-          <img src="Image6.jpg" class="card-img-top rounded gallery-img lightbox" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image6.jpg" alt="Image6">
+          <img src="Image6.jpg" class="card-img-top rounded gallery-img lightbox" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="Image6.jpg" data-testid="gallery-img" alt="Image6">
           <div class="card-body text-center">
             <h6>Card Title 6</h6>
             <p>Some details about this card image.</p>
